bindings/c/pnf_c.hpp

/// \brief Opaque chart handle.
    typedef struct PnfChart PnfChart;
/// \brief Opaque indicators handle.
    typedef struct PnfIndicators PnfIndicators;
/// \brief Indicator configuration parameters.
    typedef struct {
        int sma_short_period;
        int sma_medium_period;
        int sma_long_period;
        int bollinger_period;
        double bollinger_std_devs;
        int rsi_period;
        double rsi_overbought;
        double rsi_oversold;
        double bullish_alert_threshold;
        double bearish_alert_threshold;
        double support_resistance_threshold;
        int congestion_min_columns;
        double congestion_price_range;
    } PnfIndicatorConfig;
/// \brief PnfDoubleArray.
    typedef struct {
        double* data;
        size_t length;
    } PnfDoubleArray;
    // Clear and utility
/// \brief Chart clear.
    /// \param chart 
    PNF_API void pnf_chart_clear(PnfChart* chart);
/// \brief Chart to string.
    /// \param chart 
    /// \return 
    PNF_API const char* pnf_chart_to_string(const PnfChart* chart);
/// \brief Chart to ascii.
    /// \param chart 
    /// \return 
    PNF_API const char* pnf_chart_to_ascii(const PnfChart* chart);
/// \brief Chart to json.
    /// \param chart 
    /// \return 
    PNF_API const char* pnf_chart_to_json(const PnfChart* chart);
    // Indicators creation/destruction
/// \brief Indicators create.
    /// \return 
    PNF_API PnfIndicators* pnf_indicators_create(void);
/// \brief Indicators create default.
    /// \return 
    PNF_API PnfIndicators* pnf_indicators_create_default(void);
/// \brief Indicators create with config.
    /// \param config 
    /// \return 
    PNF_API PnfIndicators* pnf_indicators_create_with_config(const PnfIndicatorConfig* config);
/// \brief Indicators destroy.
    /// \param indicators 
    PNF_API void pnf_indicators_destroy(PnfIndicators* indicators);
    // Indicator configuration
/// \brief Indicators configure.
    /// \param ind 
    /// \param config 
    PNF_API void pnf_indicators_configure(PnfIndicators* ind, const PnfIndicatorConfig* config);
/// \brief Indicators set sma periods.
    /// \param ind 
    /// \param short_period 
    /// \param medium_period 
    /// \param long_period 
    PNF_API void pnf_indicators_set_sma_periods(PnfIndicators* ind, int short_period, int medium_period, int long_period);
/// \brief Indicators set bollinger params.
    /// \param ind 
    /// \param period 
    /// \param std_devs 
    PNF_API void pnf_indicators_set_bollinger_params(PnfIndicators* ind, int period, double std_devs);
/// \brief Indicators set rsi params.
    /// \param ind 
    /// \param period 
    /// \param overbought 
    /// \param oversold 
    PNF_API void pnf_indicators_set_rsi_params(PnfIndicators* ind, int period, double overbought, double oversold);
/// \brief Indicators set bullish percent thresholds.
    /// \param ind 
    /// \param bullish 
    /// \param bearish 
    PNF_API void pnf_indicators_set_bullish_percent_thresholds(PnfIndicators* ind, double bullish, double bearish);
/// \brief Indicators set support resistance threshold.
    /// \param ind 
    /// \param threshold 
    PNF_API void pnf_indicators_set_support_resistance_threshold(PnfIndicators* ind, double threshold);
/// \brief Indicators set congestion params.
    /// \param ind 
    /// \param min_columns 
    /// \param price_range 
    PNF_API void pnf_indicators_set_congestion_params(PnfIndicators* ind, int min_columns, double price_range);
    // Indicator calculation
/// \brief Indicators calculate.
    /// \param indicators 
    /// \param chart 
    PNF_API void pnf_indicators_calculate(PnfIndicators* indicators, const PnfChart* chart);
    // SMA values
/// \brief Indicators sma short.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_sma_short(const PnfIndicators* ind, int column);
/// \brief Indicators sma medium.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_sma_medium(const PnfIndicators* ind, int column);
/// \brief Indicators sma long.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_sma_long(const PnfIndicators* ind, int column);
/// \brief Indicators sma short values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_sma_short_values(const PnfIndicators* ind);
/// \brief Indicators sma medium values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_sma_medium_values(const PnfIndicators* ind);
/// \brief Indicators sma long values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_sma_long_values(const PnfIndicators* ind);
    // Bollinger values
/// \brief Indicators bollinger middle.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_bollinger_middle(const PnfIndicators* ind, int column);
/// \brief Indicators bollinger upper.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_bollinger_upper(const PnfIndicators* ind, int column);
/// \brief Indicators bollinger lower.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_bollinger_lower(const PnfIndicators* ind, int column);