bindings/csharp/NativeMethods.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_clear API.
        /// </summary>
        /// <summary>
        /// pnf_chart_clear API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern void pnf_chart_clear(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_to_string API.
        /// </summary>
        /// <summary>
        /// pnf_chart_to_string API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_chart_to_string(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_to_ascii API.
        /// </summary>
        /// <summary>
        /// pnf_chart_to_ascii API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_chart_to_ascii(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_to_json API.
        /// </summary>
        /// <summary>
        /// pnf_chart_to_json API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_chart_to_json(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_create API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_create API.
        /// </summary>
        /// <returns></returns>
        public static extern IntPtr pnf_indicators_create();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_create_default API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_create_default API.
        /// </summary>
        /// <returns></returns>
        public static extern IntPtr pnf_indicators_create_default();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_create_with_config API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_create_with_config API.
        /// </summary>
        /// <param name="config"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_indicators_create_with_config(ref IndicatorConfig config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_destroy API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_destroy API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_destroy(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_configure API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_configure API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="config"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_configure(IntPtr indicators, ref IndicatorConfig config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_set_sma_periods API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_set_sma_periods API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="shortPeriod"></param>
        /// <param name="mediumPeriod"></param>
        /// <param name="longPeriod"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_set_sma_periods(IntPtr indicators, int shortPeriod, int mediumPeriod, int longPeriod);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_set_bollinger_params API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_set_bollinger_params API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="period"></param>
        /// <param name="stdDevs"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_set_bollinger_params(IntPtr indicators, int period, double stdDevs);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_set_rsi_params API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_set_rsi_params API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="period"></param>
        /// <param name="overbought"></param>
        /// <param name="oversold"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_set_rsi_params(IntPtr indicators, int period, double overbought, double oversold);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_set_bullish_percent_thresholds API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_set_bullish_percent_thresholds API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="bullish"></param>
        /// <param name="bearish"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_set_bullish_percent_thresholds(IntPtr indicators, double bullish, double bearish);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_set_support_resistance_threshold API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_set_support_resistance_threshold API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="threshold"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_set_support_resistance_threshold(IntPtr indicators, double threshold);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_set_congestion_params API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_set_congestion_params API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="minColumns"></param>
        /// <param name="priceRange"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_set_congestion_params(IntPtr indicators, int minColumns, double priceRange);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_calculate API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_calculate API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern void pnf_indicators_calculate(IntPtr indicators, IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_sma_short API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_sma_short API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_sma_short(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_sma_medium API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_sma_medium API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_sma_medium(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_sma_long API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_sma_long API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_sma_long(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_sma_short_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_sma_short_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_sma_short_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_sma_medium_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_sma_medium_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_sma_medium_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_sma_long_values API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_sma_long_values API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_sma_long_values(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bollinger_middle API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bollinger_middle API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_bollinger_middle(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bollinger_upper API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bollinger_upper API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_bollinger_upper(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_bollinger_lower API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_bollinger_lower API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern double pnf_indicators_bollinger_lower(IntPtr indicators, int column);
